Working as planned Fixed bug where footer wasn't sticking to bottom on small pages Added menu bar to header modified buttons to stretch outwards

--- a/Website/css/basic_style.css
+++ b/Website/css/basic_style.css
@@ -11,4 +11,5 @@ font-size: 4em;
 .enlarged_font
 {
 	font-size: 1.5em;
+	text-align: justify;
 }
