--- a/Website/css/nav_menu.css
+++ b/Website/css/nav_menu.css
@@ -20,16 +20,23 @@ ul.nav_menu_buttons li {
 	display: block;
 	width: 8em;
 	height: 2em;
+	line-height: 2em;
 	background: #00cd00;
-	-moz-transition: all 0.8s ease-out;
-	-webkit-transition: all 0.8s ease-out;	transition: all 0.8s ease-out;
+	-moz-transition: all 0.6s ease-out;
+	-webkit-transition: all 0.6s ease-out;
+	transition: all 0.6s ease-out;
 	-moz-border-radius: 2em;
-	-webkit-border-radius: 2em;	border-radius: 2em;
+	-webkit-border-radius: 2em;
+	border-radius: 2em;
 	text-shadow: 1px 1px 1px #000;
 }
 
-.nav_button:hover span {
-
+.nav_button:hover span.left {
 	-webkit-transform: translate(0.5em, 0);
-	-moz-transform: translate(1em, 0);translate(1em, 0);
+	-moz-transform: translate(0.5em, 0);translate(0.5em, 0);
+}
+
+.nav_button:hover span.right {
+	-webkit-transform: translate(-1em, 0);
+	-moz-transform: translate(-1em, 0);translate(-1em, 0);
 }
