--- a/Website/css/sticky_div.css
+++ b/Website/css/sticky_div.css
@@ -1,5 +1,5 @@
-.container {
-	font-size: 4em;
+.nav_menu_container {
+	font-size: 110%;
 	width: 100%
 }
 
